<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    android:title="@strings/quad_dac">

    <SwitchPreference
        android:key="quaddac_switch"
        android:summaryOn="@string/quad_dac_on"
        android:summaryOff="@string/quad_dac_off"
        android:title="@string/quad_dac" />

    <PreferenceCategory
        android:title="@string/quad_dac_settings" >

        <ListPreference
            android:key="hifi_mode_dropdown"
            android:title="@string/hifi_mode"
            android:summary="%s"
            android:entries="@array/hifi_mode_entry_values"
            android:entryValues="@array/hifi_mode_entry_values" />

        <SeekBarPreference
            android:key="avc_volume_seekbar"
            android:title="@string/avc_volume"
            android:summary="@string/avc_volume_summary"
            asp:min="-24"
            android:max="0"
            android:defaultValue="-14" />

        <ListPreference
            android:key="digital_filter_dropdown"
            android:title="@string/digital_filter"
            android:summary="%s"
            android:entries="@array/digital_filter_entry_values"
            android:entryValues="@array/digital_filter_entry_values" />

    </PreferenceCategory>

    <!-- Customizable filter category -->
    <PreferenceCategory
        android:title="@string/customizable_filter_settings">

        <ListPreference
            android:key="custom_filter_shape"
            android:title="@string/cf_shape"
            android:summary="%s"
            android:entries="@array/custom_filter_shapes"
            android:entryValues="@array/custom_filter_shapes" />

        <ListPreference
            android:key="custom_filter_symmetry"
            android:title="@string/cf_symmetry"
            android:summary="%s"
            android:entries="@array/custom_filter_symmetries"
            android:entryValues="@array/custom_filter_symmetries" />

    </PreferenceCategory>

    <!-- These ones really need their own category to keep things more organized -->
    <PreferenceCategory
        android:title="@string/customizable_filter_coeffs">

        <!-- Tons of coefficient seekbars BEGIN -->
        <SeekBarPreference
            android:key="custom_filter_coeff0"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff1"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff2"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff3"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff4"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff5"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff6"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff7"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff8"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff9"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff10"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff11"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff12"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />
        <SeekBarPreference
            android:key="custom_filter_coeff13"
            android:title=""
            android:summary="%s"
            asp:min="-9999999"
            android:max="9999999"
            android:defaultValue="0" />

        <!-- Tons of coefficient seekbars END -->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/quad_dac_balance" >

        <org.lineageos.settings.device.dac.ui.BalancePreference
            android:key="balance"
            android:summary="@string/quad_dac_balance_summary"
            android:title="" />

    </PreferenceCategory>

</PreferenceScreen>

